[package]
name = "advent_of_code_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "2.3", features = ["cookies"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
time = "0.3"
cookie_store = "0.15"
url = "2"